Fixed light and dark mode

--- a/src/assets/styles/universal.css
+++ b/src/assets/styles/universal.css
@@ -6,6 +6,18 @@
 	--dark-color: hsl(260 20% 10% / 0.95);
 }
 
+.darkMode {
+	background-color: var(--dark-color);
+
+	a {
+		color: wheat;
+	}
+
+	a:hover {
+		 color: hsl(260 25% 5% / 0.95);
+	}
+}
+
 hgroup {
 	float: right;
 	display: grid;
@@ -57,8 +69,8 @@ hgroup > * {
 
 @keyframes fadeInUp {
     to {
-        opacity: 1; /* Fade in */
-        transform: translateY(0); /* Return to original position */
+        opacity: 1;
+        transform: translateY(0); 
     }
 }
 
@@ -67,7 +79,7 @@ hgroup > * {
         width: 0;
     }
     to {
-        width: 100%; /* Matches the width of the text */
+        width: 100%;
     }
 }
 
